fix exit of request free demo modal-now comes off screen without going transluscent first

--- a/src/components/UI/FreeDemoModal.module.css
+++ b/src/components/UI/FreeDemoModal.module.css
@@ -19,21 +19,26 @@
 	justify-content: center;
 	align-items: center;
 	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: -1000;
+	transition: all .2s ease-out;
+	transition-delay: 1s;
 }
 
 .on_screen {
 	transform: translateY(20%);
 	/* transition: all 1s ease-out; */
-	transition: all 1s cubic-bezier(.03,.89,.96,1)
+	transition: all 1s cubic-bezier(0.03, 0.89, 0.96, 1);
 }
 
 .off_screen {
 	transform: translateY(-800px);
-	transition: all 1s ease-out;
-	/* transition: all 1s cubic-bezier(.03,.89,.96,1) */
+	/* transition: all 1s ease-out; */
+	z-index: -1000;
+	transition: all 1s cubic-bezier(.03,.89,.96,1)
 }
 
 .free_demo_modal_card {
@@ -42,23 +47,23 @@
 	margin-top: 13%;
 	overflow: hidden;
 	box-sizing: border-box;
-	/* animation: slide-down .7s ease-out forwards;
-	animation: animate-fade 0.7s backwards; */
+	/* animation: slide-down .7s ease-out forwards; */
+	/* animation: animate-fade 0.7s backwards; */
 }
 
 /* @keyframes animate-fade {
 	0% {
-		opacity: 0;
+		opacity: 1;
 		transform: scale(0.5, 0.5);
 		transform: translateY(-100px);
 	}
 	100% {
-		opacity: 1;
+		opacity: 0;
 		transform: scale(1, 1);
 		transform: translateY(0px);
 	}
-}
-@keyframes slide-down {
+} */
+/* @keyframes slide-down {
 	from {
 		transform: translateY(-1000px);
 	}
@@ -160,9 +165,9 @@ textarea:focus {
 .step_1 {
 	display: flex;
 	justify-content: space-between;
-  font-size: 18px;
-  font-weight: 700;
-  margin-bottom: 25px;
+	font-size: 18px;
+	font-weight: 700;
+	margin-bottom: 25px;
 }
 .step_1 a {
 	text-decoration: none;
@@ -179,7 +184,13 @@ textarea:focus {
 	grid-gap: 30px;
 	margin-top: 40px;
 	font-family: Averta;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.4rem;
 	color: #666d80;
+}
+.step_2 button {
+	margin: 0 10px;
 }
 .step_2_schedule {
 	text-align: end;
