--- a/src/components/UI/ViewTermsModal.module.css
+++ b/src/components/UI/ViewTermsModal.module.css
@@ -7,6 +7,8 @@
 	position: fixed;
 	display: flex;
 	justify-content: center;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
@@ -19,10 +21,11 @@
 	position: absolute;
 	width: 100%;
 	z-index: -1000;
+	transition: all 1.5s ease-out;
 }
 
 .on_screen {
-	transform: translateY(0px);
+	transform: translateY(20%);
 	transition: all 1s ease-out;
 }
 
